CV as of November, 2015

--- a/tbekolay_cv.tex
+++ b/tbekolay_cv.tex
@@ -11,7 +11,7 @@
 \pagestyle{fancy}
 \renewcommand{\headrulewidth}{0pt}
 \fancyhf{}
-\rfoot{\rule{14.7em}{0.4pt} \\ Updated November 2014~|~\thepage~of~\pageref{LastPage}}
+\rfoot{\rule{14.7em}{0.4pt} \\ Updated November 2015~|~\thepage~of~\pageref{LastPage}}
 
 \setlength{\parskip}{0.6em}
 
@@ -25,7 +25,7 @@
 
 {\sl Doctor of Philosophy,} Computer Science \\
 University of Waterloo, Waterloo, ON, \\
-expected September 2015 \\
+expected December 2015 \\
 Member of the Computational Neuroscience Research Group \\
 Cumulative GPA: 94.00
 
@@ -44,10 +44,12 @@ Cumulative GPA: 4.28/4.5
 \section{AWARDS \& \\ SCHOLARSHIPS}
 
 \begin{tabular}{lrl}
+{\sl David R. Cheriton Grad. Scholarship} (CS, UWaterloo) &
+\$20,000 & 2015/01 -- 2015/12\\
 {\sl Travel Award for Cognitive Science 2013} (AI Journal) &
 \euro{}500 & 2013/07 \\
 {\sl David R. Cheriton Grad. Scholarship} (CS, UWaterloo) &
-\$20,000 & 2013/01 -- 2014/12 \\
+\$20,000 & 2013/01 -- 2014/12\\
 {\sl Alexander Graham Bell CGS - Doctorate} (NSERC) &
 \$105,000 & 2012/09 -- 2015/09 \\
 {\sl President's Graduate Scholarship} (CS, UWaterloo) &
@@ -134,7 +136,7 @@ Department of Computer Science, University of Manitoba
 \section{TEACHING \\ACCREDITATION}
 
 {\bf Certificate in University Teaching} \\
-In progress; expected completion in April, 2015.
+Completed in August, 2015.
 
 {\bf Fundamentals of University Teaching} \\
 Completed in April, 2012.
@@ -266,6 +268,11 @@ C. Eliasmith, \textbf{T. Bekolay}, and X. Choo. (2013) \\
   PyCon Canada 2012, in Toronto, ON.
 
 \section{POSTER \\PRESENTATIONS}
+
+\textbf{T. Bekolay}, T. C. Stewart, X. Choo, T. DeWolf, Y. Tang,
+D. Rasmussen, J. Gosmann, C. Eliasmith (2015)
+  {\sl Spaun: a biologically realistic large-scale functional brain model} \\
+  Ontario and Canada Research Chairs Symposium, 2015, in Toronto, ON.
 
 \textbf{T. Bekolay}, T. C. Stewart, X. Choo, T. DeWolf, Y. Tang,
 D. Rasmussen, C. Eliasmith (2013)
