CV as of March, 2016

--- a/tbekolay_cv.tex
+++ b/tbekolay_cv.tex
@@ -11,7 +11,7 @@
 \pagestyle{fancy}
 \renewcommand{\headrulewidth}{0pt}
 \fancyhf{}
-\rfoot{\rule{14.7em}{0.4pt} \\ Updated November 2015~|~\thepage~of~\pageref{LastPage}}
+\rfoot{\rule{14.7em}{0.4pt} \\ Updated March 2016~|~\thepage~of~\pageref{LastPage}}
 
 \setlength{\parskip}{0.6em}
 
@@ -21,11 +21,24 @@
 
 \begin{resume}
 
+\section{CURRENT \\ POSITION}
+
+{\sl Senior scientist \& co-founder,} Applied Brain Research
+\hfill since February 2016
+\begin{itemize} \itemsep -2pt
+  \item Researching speech recognition and synthesis
+    in spiking neural networks.
+  \item Leading development of Nengo software, which includes
+    writing code, reviewing and merging contributions,
+    and releasing software packages.
+\end{itemize} \vspace{-4pt}
+
 \section{EDUCATION}
 
 {\sl Doctor of Philosophy,} Computer Science \\
 University of Waterloo, Waterloo, ON, \\
-expected December 2015 \\
+graduated January 2016 \\
+with Graduate Diplomas in Theoretical Neuroscience and Cognitive Science \\
 Member of the Computational Neuroscience Research Group \\
 Cumulative GPA: 94.00
 
@@ -43,7 +56,7 @@ Cumulative GPA: 4.28/4.5
 
 \section{AWARDS \& \\ SCHOLARSHIPS}
 
-\begin{tabular}{lrl}
+\hspace{-1.4em}\begin{tabular}{lrl}
 {\sl David R. Cheriton Grad. Scholarship} (CS, UWaterloo) &
 \$20,000 & 2015/01 -- 2015/12\\
 {\sl Travel Award for Cognitive Science 2013} (AI Journal) &
@@ -183,13 +196,13 @@ Assistant Editor for Scholarpedia (\url{www.scholarpedia.org}). \\
 September, 2010 -- present.
 
 Instructor at Nengo Summer School, University of Waterloo. \\
-June 9-21, 2014
+June 9--21, 2014 \& June 8--19, 2015
 
 TA Committee member of the CS-GSA, University of Waterloo. \\
 2010-2012.
 
 Attended University of Ottawa Summer School in Computational Neuroscience. \\
-June 13-25, 2010. \vspace{8pt}
+June 13--25, 2010. \vspace{8pt}
 
 {\Large \bf Refereed Publications} \\ \vspace{-8pt} \hrule
 
@@ -299,6 +312,11 @@ D. Rasmussen, C. Eliasmith (2013)
 
 \section{THESES}
 
+\textbf{T. Bekolay.} (2016)
+  {\sl Biologically inspired methods in speech recognition and synthesis:
+  closing the loop.} \\
+  Doctor of Philosophy thesis, University of Waterloo.
+
 \textbf{T. Bekolay.} (2011)
   {\sl Learning in large-scale spiking neural networks.} \\
   Masters of Mathematics thesis, University of Waterloo.
@@ -329,11 +347,11 @@ D. Rasmussen, C. Eliasmith (2013)
 \section{SOFTWARE}
 
 \textbf{T. Bekolay.} (2014 -- Present)
-  {\sl Lead developer of the Nengo 2 neural simulator.}
+  {\sl Lead developer of the Nengo neural simulator.}
   Freely available for non-commercial purposes.
 
 \textbf{T. Bekolay.} (2010 -- Present)
-  {\sl Build manager and contributor to the Nengo 1.4 neural simulator.}
+  {\sl Build manager and contributor to Nengo 1.4 (an old Java version).}
   Released under Mozilla public license and GNU General Public License.
 
 \textbf{T. Bekolay.} (2013)
