CV as of March, 2018

--- a/tbekolay_cv.tex
+++ b/tbekolay_cv.tex
@@ -11,7 +11,7 @@
 \pagestyle{fancy}
 \renewcommand{\headrulewidth}{0pt}
 \fancyhf{}
-\rfoot{\rule{14.7em}{0.4pt} \\ Updated March 2016~|~\thepage~of~\pageref{LastPage}}
+\rfoot{\rule{14.7em}{0.4pt} \\ Updated March 2018~|~\thepage~of~\pageref{LastPage}}
 
 \setlength{\parskip}{0.6em}
 
@@ -23,21 +23,22 @@
 
 \section{CURRENT \\ POSITION}
 
-{\sl Senior scientist \& co-founder,} Applied Brain Research
+{\sl Senior research scientist \& co-founder,} Applied Brain Research
 \hfill since February 2016
 \begin{itemize} \itemsep -2pt
-  \item Researching speech recognition and synthesis
+  \item Leads development of Nengo software, which includes
+    writing code, managing contributions,
+    releasing packages, and communicating with the public.
+  \item Researches learning algorithms,
+    speech recognition, and speech synthesis
     in spiking neural networks.
-  \item Leading development of Nengo software, which includes
-    writing code, reviewing and merging contributions,
-    and releasing software packages.
 \end{itemize} \vspace{-4pt}
 
 \section{EDUCATION}
 
 {\sl Doctor of Philosophy,} Computer Science \\
 University of Waterloo, Waterloo, ON, \\
-graduated January 2016 \\
+graduated February 2016 \\
 with Graduate Diplomas in Theoretical Neuroscience and Cognitive Science \\
 Member of the Computational Neuroscience Research Group \\
 Cumulative GPA: 94.00
@@ -108,6 +109,8 @@ Department of Computer Science, University of Manitoba
   \item COMP1010 -- Introductory Computer Science 1 \hfill Fall 2008
 \end{itemize}
 
+\clearpage
+
 {\bf Workshop Instructor} ~~3 two day workshops \vspace{4pt} \\
 Software Carpentry, Mozilla Foundation
 
@@ -173,9 +176,7 @@ Intelligent Reasoning, Critiquing, and Learning lab at the University of Alberta
 NumPy Foundation for Open Code for Usable Science (NumFOCUS),
 supporting member. January 2014 -- Present.
 
-Cognitive Science Society. 2013.
-
-TeX Users Group. June 2012 -- Present.
+TeX Users Group. June 2012 -- June 2015.
 
 Cognitive Science Society. 2013.
 
@@ -183,7 +184,8 @@ Society for Neuroscience. 2011.
 
 \section{STUDENT \\ SUPERVISION}
 
-Supervised Jonathan Lai (undergraduate research student) Fall 2011.
+Supervised Jonathan Lai, Fall 2011
+and Houze Wang, Fall 2017.
 
 \section{OUTREACH}
 
@@ -193,10 +195,10 @@ Guest on the Weekly Weinersmith podcast, December 9, 2012. \\
 \section{OTHER \\ ACTIVITIES}
 
 Assistant Editor for Scholarpedia (\url{www.scholarpedia.org}). \\
-September, 2010 -- present.
+September, 2010 -- February, 2016.
 
 Instructor at Nengo Summer School, University of Waterloo. \\
-June 9--21, 2014 \& June 8--19, 2015
+June 9--21, 2014, June 8--19, 2015 \& June 6--17, 2016.
 
 TA Committee member of the CS-GSA, University of Waterloo. \\
 2010-2012.
@@ -207,6 +209,13 @@ June 13--25, 2010. \vspace{8pt}
 {\Large \bf Refereed Publications} \\ \vspace{-8pt} \hrule
 
 \section{JOURNAL \\ARTICLES}
+
+B. J. Kr\"{o}ger, E. Crawford, \textbf{T. Bekolay}, C. Eliasmith. (2016) \\
+  {\sl Modeling interactions between speech production and perception:
+  speech error detection at semantic and phonological levels
+  and the inner speech loop.} \\
+  Frontiers in Computational Neuroscience, 10:51.
+  DOI: 10.3389/fncom.2016.00051.
 
 \textbf{T. Bekolay}, M. Laubach, C. Eliasmith. (2014) \\
   {\sl A spiking neural integrator model of the adaptive control of action
@@ -235,6 +244,12 @@ T.C. Stewart, \textbf{T. Bekolay}, C. Eliasmith. (2011)
   Connection Science 22, 145--153.
 
 \section{CONFERENCE \\PROCEEDINGS}
+
+C. M. Stille, \textbf{T. Bekolay}, B. J. Kr\"{o}ger. \\
+  {\sl Neural modeling of developmental lexical disorders,}
+  in Bernstein Conference.
+  G\"{o}ttingen, Germany, 2017.
+  DOI: 10.12751/nncn.bc2017.0126
 
 B. J. Kr\"{o}ger, \textbf{T. Bekolay}, C. Eliasmith. \\
   {\sl Modeling speech
