CV as of July, 2018

--- a/tbekolay_cv.tex
+++ b/tbekolay_cv.tex
@@ -11,7 +11,7 @@
 \pagestyle{fancy}
 \renewcommand{\headrulewidth}{0pt}
 \fancyhf{}
-\rfoot{\rule{14.7em}{0.4pt} \\ Updated March 2018~|~\thepage~of~\pageref{LastPage}}
+\rfoot{\rule{14.7em}{0.4pt} \\ Updated July 2018~|~\thepage~of~\pageref{LastPage}}
 
 \setlength{\parskip}{0.6em}
 
@@ -23,13 +23,13 @@
 
 \section{CURRENT \\ POSITION}
 
-{\sl Senior research scientist \& co-founder,} Applied Brain Research
-\hfill since February 2016
+{\sl Senior research scientist \& co-founder,} Applied Brain Research \\
+since February 2016
 \begin{itemize} \itemsep -2pt
-  \item Leads development of Nengo software, which includes
+  \item Lead development of Nengo software, which includes
     writing code, managing contributions,
     releasing packages, and communicating with the public.
-  \item Researches learning algorithms,
+  \item Research learning algorithms,
     speech recognition, and speech synthesis
     in spiking neural networks.
 \end{itemize} \vspace{-4pt}
@@ -210,17 +210,30 @@ June 13--25, 2010. \vspace{8pt}
 
 \section{JOURNAL \\ARTICLES}
 
+V. Senft, T.C. Stewart, \textbf{T. Bekolay}, C. Eliasmith,
+B. J. Kr\"{o}ger. (2018) \\
+  {\sl Inhibiting basal ganglia regions reduces syllable sequencing errors
+    in parkinson's disease: a computer simulation study.} \\
+  Frontiers in Computational Neuroscience, 12:41.
+  DOI: 10.3389/fncom.2018.00041
+
 B. J. Kr\"{o}ger, E. Crawford, \textbf{T. Bekolay}, C. Eliasmith. (2016) \\
   {\sl Modeling interactions between speech production and perception:
   speech error detection at semantic and phonological levels
   and the inner speech loop.} \\
   Frontiers in Computational Neuroscience, 10:51.
-  DOI: 10.3389/fncom.2016.00051.
+  DOI: 10.3389/fncom.2016.00051
+
+V. Senft, T.C. Stewart, \textbf{T. Bekolay}, C. Eliasmith,
+B. J. Kr\"{o}ger. (2015) \\
+  {\sl Reduction of dopamine in basal ganglia and its effects on
+    syllable sequencing in speech: a computer simulation study.} \\
+  Basal Ganglia, 6(1):7--17. DOI: 10.1016/j.baga.2015.10.003
 
 \textbf{T. Bekolay}, M. Laubach, C. Eliasmith. (2014) \\
   {\sl A spiking neural integrator model of the adaptive control of action
   by the medial prefrontal cortex.}
-  The Journal of Neuroscience, 34(5):1892--1902
+  The Journal of Neuroscience, 34(5):1892--1902.
 
 \textbf{T. Bekolay}, J. Bergstra, E. Hunsberger, T. DeWolf, T.C. Stewart,
   D. Rasmussen, X. Choo, A. R. Voelker, C. Eliasmith. (2014) \\
@@ -250,6 +263,12 @@ C. M. Stille, \textbf{T. Bekolay}, B. J. Kr\"{o}ger. \\
   in Bernstein Conference.
   G\"{o}ttingen, Germany, 2017.
   DOI: 10.12751/nncn.bc2017.0126
+
+B. J. Kr\"{o}ger, \textbf{T. Bekolay}, P.Blouw. \\
+  {\sl Modeling motor planning in speech production using
+    the Neural Engineering Framework,}
+  in Electronic Speech Signal Processing, 15--22.
+  Leipzig, Germany, 2016.
 
 B. J. Kr\"{o}ger, \textbf{T. Bekolay}, C. Eliasmith. \\
   {\sl Modeling speech
