CV as of December 13, 2024

--- a/tbekolay_cv.tex
+++ b/tbekolay_cv.tex
@@ -11,7 +11,7 @@
 \pagestyle{fancy}
 \renewcommand{\headrulewidth}{0pt}
 \fancyhf{}
-\rfoot{\rule{14.7em}{0.4pt} \\ Updated July 2018~|~\thepage~of~\pageref{LastPage}}
+\rfoot{\rule{14.7em}{0.4pt} \\ Updated December 2024~|~\thepage~of~\pageref{LastPage}}
 
 \setlength{\parskip}{0.6em}
 
@@ -23,10 +23,18 @@
 
 \section{CURRENT \\ POSITION}
 
-{\sl Senior research scientist \& co-founder,} Applied Brain Research \\
-since February 2016
+{\sl Head of Application Engineering,} Applied Brain Research \\
+December 2023--present
 \begin{itemize} \itemsep -2pt
-  \item Lead development of Nengo software, which includes
+  \item Work with customers to define requirements for integrating
+    the TSP chip hardware in their consumer devices.
+  \item Develop software to support customer integrations.
+\end{itemize} \vspace{-4pt}
+
+{\sl Senior research scientist,} Applied Brain Research \\
+February 2016--December 2023
+\begin{itemize} \itemsep -2pt
+  \item Led development of Nengo software, which includes
     writing code, managing contributions,
     releasing packages, and communicating with the public.
   \item Research learning algorithms,
@@ -171,40 +179,10 @@ Centres for Research in Youth, Science Teaching and Learning (CRYSTAL)
 {\sl Research Assistant} \hfill Winter 2007 \\
 Intelligent Reasoning, Critiquing, and Learning lab at the University of Alberta
 
-\section{MEMBERSHIPS}
-
-NumPy Foundation for Open Code for Usable Science (NumFOCUS),
-supporting member. January 2014 -- Present.
-
-TeX Users Group. June 2012 -- June 2015.
-
-Cognitive Science Society. 2013.
-
-Society for Neuroscience. 2011.
-
-\section{STUDENT \\ SUPERVISION}
-
-Supervised Jonathan Lai, Fall 2011
-and Houze Wang, Fall 2017.
-
 \section{OUTREACH}
 
 Guest on the Weekly Weinersmith podcast, December 9, 2012. \\
 \url{http://www.weeklyweinersmith.com/?p=510}
-
-\section{OTHER \\ ACTIVITIES}
-
-Assistant Editor for Scholarpedia (\url{www.scholarpedia.org}). \\
-September, 2010 -- February, 2016.
-
-Instructor at Nengo Summer School, University of Waterloo. \\
-June 9--21, 2014, June 8--19, 2015 \& June 6--17, 2016.
-
-TA Committee member of the CS-GSA, University of Waterloo. \\
-2010-2012.
-
-Attended University of Ottawa Summer School in Computational Neuroscience. \\
-June 13--25, 2010. \vspace{8pt}
 
 {\Large \bf Refereed Publications} \\ \vspace{-8pt} \hrule
 
@@ -287,7 +265,12 @@ C. Kolbeck, \textbf{T. Bekolay}, C. Eliasmith. {\sl A biologically
   Conference on Cognitive Modelling, 53--58.
   Carleton University, 2013.
 
-\section{BOOK CHAPTERS}
+\section{BOOKS \& \\BOOK CHAPTERS}
+
+B. J. Kr\"{o}ger, \textbf{T. Bekolay}. (2019) \\
+  {\sl Neural Modeling of Speech Processing
+  and Speech Learning: An Introduction,}
+  Springer.
 
 C. Eliasmith, \textbf{T. Bekolay}, and X. Choo. (2013) \\
   {\sl Biological cognition: Learning and memory}, in C. Eliasmith.
@@ -374,15 +357,20 @@ D. Rasmussen, C. Eliasmith (2013)
   the Neural Engineering Framework.} \\
   Centre for Theoretical Neuroscience Technical Report CTN-TR-20100803-006.
 
-% ??? patents
+\section{PATENTS}
 
-% http://brevets-patents.ic.gc.ca/opic-cipo/cpd/eng/patent/2798529/summary.html
+\textbf{T. Bekolay}. 2018. Methods and systems for extracting auditory features with neural networks.
+  US Patent 10,026,395 B1, filed January 6, 2017, and issued July 17, 2018.
+
+\textbf{T. Bekolay}. 2021. Methods and systems for continuous state estimation and signal classification
+  with dynamic movement primitives. US Patent 10,984,309 B1, filed February 16, 2017 and issued
+  April 20, 2021.
 
 \section{SOFTWARE}
 
-\textbf{T. Bekolay.} (2014 -- Present)
+\textbf{T. Bekolay.} (2014 -- 2022)
   {\sl Lead developer of the Nengo neural simulator.}
-  Freely available for non-commercial purposes.
+  Released under the GPLv2 license.
 
 \textbf{T. Bekolay.} (2010 -- Present)
   {\sl Build manager and contributor to Nengo 1.4 (an old Java version).}
